# ConChord

./: .gitignore  downloader.py  preprocess.py  pyproject.toml  requirements.txt
config/: config.py  datasets.json
data/: downloader.py
data/filtered/: AAM.npz  MAESTRO.npz
data/processed/: README.txt
data/trainable/: AAM_trainable.npz
src/conchord/: downloader.py  preprocess.py
src/conchord/utils/: logger.py  parser.py  utils.py
utils/: parser.py  utils.py
